--- a/index.html
+++ b/index.html
@@ -1,53 +1,51 @@
     <!DOCTYPE html>
-    <html lang="en" data-bs-theme="light">
+    <html lang="en" data-bs-theme="dark">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>John Doe - Portfolio</title>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
         <style>
             body {
                 font-family: 'Inter', sans-serif;
                 line-height: 1.6;
-                color: #333;
-                background-color: #f8f9fa;
-                transition: background-color 0.3s ease, color 0.3s ease;
+                color: #e2e8f0;
+                background-color: #1a202c;
             }
 
             .container {
                 max-width: 800px;
-                background-color: #ffffff;
+                background-color: #2d3748;
                 border-radius: 12px;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
                 padding: 2rem;
                 margin-top: 2rem;
                 margin-bottom: 2rem;
-                transition: background-color 0.3s ease, box-shadow 0.3s ease;
             }
 
             h1, h2, h3 {
+                font-family: 'Poppins', sans-serif;
                 font-weight: 600;
             }
 
             h1 {
                 font-size: 2.5rem;
-                color: #1a202c;
+                color: #f7fafc;
                 margin-bottom: 1rem;
             }
 
             h2 {
                 font-size: 1.8rem;
-                color: #2d3748;
+                color: #e2e8f0;
                 margin-bottom: 1.5rem;
                 padding-bottom: 0.5rem;
-                border-bottom: 2px solid #e2e8f0;
+                border-bottom: 2px solid #4a5568;
             }
 
             .date {
                 font-style: italic;
-                color: #718096;
+                color: #a0aec0;
             }
 
             .skills-list {
@@ -59,16 +57,11 @@
             }
 
             .skills-list li {
-                background-color: #edf2f7;
-                color: #4a5568;
+                background-color: #4a5568;
+                color: #e2e8f0;
                 padding: 6px 12px;
                 border-radius: 20px;
                 font-size: 0.9rem;
-                transition: background-color 0.3s ease;
-            }
-
-            .skills-list li:hover {
-                background-color: #e2e8f0;
             }
 
             .social-links a {
@@ -77,8 +70,8 @@
                 justify-content: center;
                 width: 2.5rem;
                 height: 2.5rem;
-                background-color: #edf2f7;
-                color: #4a5568;
+                background-color: #4a5568;
+                color: #e2e8f0;
                 font-size: 1.2rem;
                 margin-right: 1rem;
                 border-radius: 50%;
@@ -87,7 +80,7 @@
             }
 
             .social-links a:hover {
-                background-color: #e2e8f0;
+                background-color: #718096;
                 transform: translateY(-2px);
             }
 
@@ -99,58 +92,6 @@
             .btn-primary:hover {
                 background-color: #3182ce;
                 border-color: #3182ce;
-            }
-
-            #theme-toggle {
-                position: fixed;
-                top: 20px;
-                right: 20px;
-                background: none;
-                border: none;
-                font-size: 1.5rem;
-                cursor: pointer;
-                transition: transform 0.3s ease;
-                color: #4a5568;
-            }
-
-            #theme-toggle:hover {
-                transform: scale(1.1);
-            }
-
-            [data-bs-theme="dark"] body {
-                color: #e2e8f0;
-                background-color: #1a202c;
-            }
-
-            [data-bs-theme="dark"] .container {
-                background-color: #2d3748;
-            }
-
-            [data-bs-theme="dark"] h1 {
-                color: #f7fafc;
-            }
-
-            [data-bs-theme="dark"] h2 {
-                color: #e2e8f0;
-                border-bottom-color: #4a5568;
-            }
-
-            [data-bs-theme="dark"] .date {
-                color: #a0aec0;
-            }
-
-            [data-bs-theme="dark"] .skills-list li {
-                background-color: #4a5568;
-                color: #e2e8f0;
-            }
-
-            [data-bs-theme="dark"] .social-links a {
-                background-color: #4a5568;
-                color: #e2e8f0;
-            }
-
-            [data-bs-theme="dark"] #theme-toggle {
-                color: #e2e8f0;
             }
         </style>
     </head>
@@ -167,8 +108,6 @@
                 <div class="social-links mt-3">
                     <a href="https://linkedin.com" aria-label="LinkedIn">in</a>
                     <a href="https://github.com" aria-label="GitHub">gh</a>
-                    <a href="https://twitter.com" aria-label="Twitter">tw</a>
-                    <a href="https://facebook.com" aria-label="Facebook">fb</a>
                 </div>
             </section>
 
@@ -219,27 +158,6 @@
             </section>
         </div>
 
-        <button id="theme-toggle" aria-label="Toggle dark mode">
-            <i class="bi bi-moon-fill"></i>
-        </button>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <script>
-            const themeToggle = document.getElementById('theme-toggle');
-            const html = document.documentElement;
-            const icon = themeToggle.querySelector('i');
-
-            function toggleTheme() {
-                if (html.getAttribute('data-bs-theme') === 'dark') {
-                    html.setAttribute('data-bs-theme', 'light');
-                    icon.classList.replace('bi-sun-fill', 'bi-moon-fill');
-                } else {
-                    html.setAttribute('data-bs-theme', 'dark');
-                    icon.classList.replace('bi-moon-fill', 'bi-sun-fill');
-                }
-            }
-
-            themeToggle.addEventListener('click', toggleTheme);
-        </script>
     </body>
     </html>
