--- a/projects.html
+++ b/projects.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>John Doe - Projects</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <style>
         body {
             font-family: 'Inter', sans-serif;
             line-height: 1.6;
-            transition: background-color 0.3s ease, color 0.3s ease;
+            color: #e2e8f0;
+            background-color: #1a202c;
         }
 
         .container {
             max-width: 800px;
+            background-color: #2d3748;
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             padding: 2rem;
             margin-top: 2rem;
             margin-bottom: 2rem;
-            transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
 
         h1, h2, h3 {
+            font-family: 'Poppins', sans-serif;
             font-weight: 600;
         }
 
         h1 {
             font-size: 2.5rem;
+            color: #f7fafc;
             margin-bottom: 1rem;
         }
 
         h2 {
             font-size: 1.8rem;
+            color: #e2e8f0;
             margin-bottom: 1.5rem;
             padding-bottom: 0.5rem;
-            border-bottom: 2px solid;
+            border-bottom: 2px solid #4a5568;
         }
 
         .project-card {
+            background-color: #3a4a5e;
             border-radius: 8px;
             padding: 1.5rem;
             margin-bottom: 1.5rem;
-            transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .project-card:hover {
@@ -62,24 +66,11 @@
         }
 
         .skills-list li {
+            background-color: #4a5568;
+            color: #e2e8f0;
             padding: 4px 8px;
             border-radius: 20px;
             font-size: 0.8rem;
-        }
-
-        #theme-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: none;
-            border: none;
-            font-size: 1.5rem;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-
-        #theme-toggle:hover {
-            transform: scale(1.1);
         }
     </style>
 </head>
@@ -131,48 +122,6 @@
         <a href="index.html" class="btn btn-secondary">Back to Main Page</a>
     </div>
 
-    <button id="theme-toggle" aria-label="Toggle dark mode">
-        <i class="bi bi-moon-fill"></i>
-    </button>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        const themeToggle = document.getElementById('theme-toggle');
-        const html = document.documentElement;
-        const icon = themeToggle.querySelector('i');
-
-        function setTheme(theme) {
-            html.setAttribute('data-bs-theme', theme);
-            icon.classList.replace(theme === 'dark' ? 'bi-moon-fill' : 'bi-sun-fill', 
-                                   theme === 'dark' ? 'bi-sun-fill' : 'bi-moon-fill');
-            localStorage.setItem('theme', theme);
-        }
-
-        function getPreferredTheme() {
-            // Check if the user has a theme preference in localStorage
-            const storedTheme = localStorage.getItem('theme');
-            if (storedTheme) {
-                return storedTheme;
-            }
-
-            // Check if the user's system prefers dark mode
-            return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-        }
-
-        // Set the initial theme
-        setTheme(getPreferredTheme());
-
-        // Listen for changes in system color scheme preference
-        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
-            setTheme(e.matches ? 'dark' : 'light');
-        });
-
-        function toggleTheme() {
-            const currentTheme = html.getAttribute('data-bs-theme');
-            setTheme(currentTheme === 'dark' ? 'light' : 'dark');
-        }
-
-        themeToggle.addEventListener('click', toggleTheme);
-    </script>
 </body>
 </html>
